--- a/sources/main.css
+++ b/sources/main.css
@@ -83,6 +83,10 @@ h3{
     font-size: var(--subtitle);
     font-weight: 600;
 }
+h4{
+    font-size: var(--subtitle-h4);
+    font-weight: 500;
+}
 p{
     font-size: var(--body-text);
     line-height: 160%;
