--- a/sources/main.css
+++ b/sources/main.css
@@ -33,7 +33,7 @@
     /* .5rem = 8px / 1rem = 16px */
     --body-font: 'system-ui', sans-serif;
     --header: 5.8rem;
-    --title: clamp(2.8rem, 3.8vw, 4.2rem);
+    --title: clamp(2.6rem, 3.8vw, 4.2rem);
     --subtitle: clamp(2rem, 2.4vw, 2.8rem);
     --subtitle-h4: clamp(1.8rem, 2.2vw, 2.4rem);
     --body-text: clamp(1.6rem, 1.8vw, 2rem);
@@ -118,6 +118,29 @@ summary{
 b{
     font-size: inherit;
 }
+button {
+    width: max-content;
+    height: 6.4rem;
+    padding: 0 2rem;
+    color: #FFFFFF;
+    border-radius: 0.8rem;
+    font-size: var(--body-text);
+    font-weight: 800;
+    text-align: center;
+    text-transform: uppercase;
+    background: var(--brand-color1);
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: background-color .4s ease;
+    transition: box-shadow .4s ease;
+    box-shadow: 0px 1.25rem 40px -11px var(--brand-color1);
+}
+button:hover {
+    background-color: bluee;
+    box-shadow: 0px 1.25rem 40px -11px var(--brand-color1);
+    color: #ffffff;
+}
 .icon-stars {
     width: 2rem;
     height: 2rem;
@@ -174,6 +197,7 @@ section.s-pain .container .pain_title h2,
 section.s-pain .container .pain_title h3{
     color: #fff;
     text-align: center;
+    margin-top: 2.4rem;
 }
 section.s-pain .container .pain_title h2 b,
 section.s-pain .container .pain_title h3 b{
@@ -406,7 +430,68 @@ footer nav ul li a{
     color: #fff;
     font-weight: 600;
 }
+footer .container p a{
+    color: #fff;
+    font-weight: 600;
+}
+footer .whatsapp img{
+    display: block;
+    width: 6.4rem;
+    height: 6.4rem;
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+}
+/* Página de obrigado */
+.s-banner-obrigado{
+    display: grid;
+    padding-top: 6.4rem;
+    padding-bottom: 6.4rem;    
+    vertical-align: middle;
+}
+.s-banner-obrigado .container{
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+}
+.s-banner-obrigado .content_congratulations h2{
+    font-size: clamp(4.5rem, 8vw, 6rem);
+    text-transform: uppercase;
 
-iframe{
+}
+.s-banner-obrigado .content_congratulations h3{
 
+    font-weight: 500;
+}
+.s-banner-obrigado .content_congratulations p{
+
+    font-weight: 400;
+}
+.s-banner-obrigado .content_image{
+    display: grid;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: flex-end;
+}
+.s-banner-obrigado .content_image img{
+    max-height: 384px;
+    object-fit: contain;
+    max-width: max-content;
+}
+
+/* página de erro 404*/
+.s-404{
+    display: grid;
+    width: 100vw;
+    height: 100vh;
+    place-content: center;
+}
+.s-404 .container h2{
+    font-size: 15vw;
+}
+.s-404 .container h3{
+    text-align: center;
+    
 }
